add up to section 1-12

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div class="container"></div>
   </body>
-  <script src="/bundle.js"></script>
+  <!-- src webpack/babel take src files and put together in single file: bundle.js -->
+  <script src="bundle.js"></script>
 </html>
